# RelayDesk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  next.config.ts  package-lock.json  package.json  pyproject.toml  wrangler.bridge.jsonc
.github/workflows/: ci.yml
.openai/: hosting.json
agent/: __init__.py  cli.py  codex-status.mjs  codex-window.ps1  control-server.mjs  control.html  crypto.mjs  http-bridge.ps1  index.mjs  providers.mjs  sessions.mjs
app/: globals.css  layout.tsx  page.tsx  relaydesk-meta.ts  relaydesk-types.ts  remote-crypto.ts
app/api/_lib/: store.ts
app/api/agent/export/: route.ts
app/api/agent/heartbeat/: route.ts
app/api/agent/poll/: route.ts
app/api/agent/send/: route.ts
app/api/client/poll/: route.ts
app/api/client/send/: route.ts
app/api/device/pair-code/: route.ts
app/api/device/register/: route.ts
app/api/pair/: route.ts
app/api/status/: route.ts
app/components/: codex-settings.tsx  conversation-view.tsx  pairing-screen.tsx  session-browser.tsx  session-loader.tsx
cloudflare-bridge/: worker.js
db/: index.ts  schema.ts
drizzle/: 0000_peaceful_darkstar.sql  0001_moaning_aaron_stack.sql  0002_cuddly_mephistopheles.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
edgeone/: package.json  shell.html
edgeone/edge-functions/api/: [[default]].js
public/: manifest.webmanifest  sw.js
public/.well-known/teo-verification/: ij01bfrok8.txt
scripts/: install-agent.ps1  prepare-edgeone.mjs  run-agent.ps1  setup.mjs
tests/: relaydesk.test.mjs
(+5 files in other folders)
